定義されているエンドポイントを実装した
